# TPA

./: .gitignore  README.md  docker-compose-ex.yml
api/: README.md  data.json  pyproject.toml  test.ipynb
api/services/: config.py  flight_service.py  hotel_service.py  news_service.py
src/UI/: Dockerfile  index.html  package.json
src/UI/src/: App.css  App.tsx  index.css
src/UI/src/components/Auth/: Auth.css  Login.tsx  Register.tsx
src/UI/src/components/Chat/: Chat.css  Chat.tsx  FormattedMessage.css  FormattedMessage.tsx  ImageGallery.css  ImageGallery.tsx  ImageModal.css  ImageModal.tsx  MessageInput.tsx  MessageList.css  MessageList.tsx  Sidebar.tsx
src/UI/src/contexts/: AuthContext.tsx  ChatContext.tsx  ThemeContext.tsx
src/UI/src/services/: api.ts
src/backend/: .env.example  CHAT_PERSISTENCE_SUMMARY.md  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  start.sh  test_agent.py
src/backend/alembic/: env.py
src/backend/alembic/versions/: 80751f0c534b_initial_migration_with_user_model.py
src/backend/api/: __init__.py
src/backend/api/v1/routes/: auth.py  chat.py  data.py
src/backend/auth/: __init__.py  security.py
src/backend/db/: __init__.py  base.py  models.py
src/backend/models/: __init__.py  chat.py  data.py  user.py
src/backend/services/: __init__.py  ai_service.py  config.py  db_checkpointer.py  flight_service.py  hotel_service.py  news_service.py
